# camera_calib

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
.tokensave/: branch-meta.json  config.json  tokensave.db
config/: default_config.yaml
examples/: run_calibration.py
include/camera_calib/: app.hpp  calibrator.hpp  camera_manager.hpp  capture_guide.hpp  config.hpp  marker_generator.hpp  pattern_display.hpp  result_writer.hpp  ui.hpp
python/: bindings.cpp
scripts/: build_opencv_manylinux.sh  build_wheels.sh
src/: app.cpp  calibrator.cpp  camera_manager.cpp  capture_guide.cpp  config.cpp  main.cpp  marker_generator.cpp  pattern_display.cpp  result_writer.cpp  ui.cpp
tests/: conftest.py  synthetic.py  test_calibrator.py  test_config.py  test_pose_metrics.py  test_result_writer.py
